wellesleynet/roles/k8s/files/15_lldap.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lldap
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lldap
  serviceName: "lldap"
  template:
    metadata:
      labels:
        app: lldap
    spec:
      enableServiceLinks: false
      containers:
      - image: nitnelave/lldap@sha256:dc9a41a41375341ed5cef5476c925f26b779e5da8df79d7a8dd22a93db394715
        imagePullPolicy: Always
        name: lldap
        ports:
        - containerPort: 3890
        - containerPort: 17170
        - containerPort: 6360
        volumeMounts:
        - name: lldap-data
          mountPath: /data
        - name: lldap-secrets
          mountPath: /secrets
          readOnly: true
        livenessProbe:
          exec:
            command:
            - ls
            - /data/lost+found
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: lldap-data
        persistentVolumeClaim:
          claimName: lldap
      - name: lldap-secrets
        secret:
          secretName: lldap
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: lldap
spec:
  selector:
    app: lldap
  ports:
  - name: authelia-ldap
    port: 389
    protocol: TCP
    targetPort: 3890
  - name: authelia-webui
    port: 17170
    protocol: TCP
    targetPort: 17170
  - name: authelia-ldaps
    port: 636
    protocol: TCP
    targetPort: 6360
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ldap
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ldap.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: lldap
            port:
              number: 17170
  tls:
  - hosts:
    - ldap.kiski.co
    secretName: lldap-kiski-co-tls
